[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/ChartEditor/ParameterShit.gd" type="Script" id=1]
[ext_resource path="res://Scripts/LineEdit.gd" type="Script" id=2]

[node name="ParameterShit" type="Node2D"]
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_right = 77.0
margin_bottom = 14.0
text = "Event Name"

[node name="LineEdit" type="LineEdit" parent="."]
margin_top = 16.0
margin_right = 387.0
margin_bottom = 40.0
script = ExtResource( 2 )

[connection signal="focus_entered" from="LineEdit" to="." method="_on_LineEdit_focus_entered"]
[connection signal="focus_exited" from="LineEdit" to="." method="_on_LineEdit_focus_exited"]
[connection signal="text_changed" from="LineEdit" to="." method="_on_LineEdit_text_changed"]
